--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.application.name=ShiftMate
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+
+
+# JWT ??? ??? (?? 32??? ??)
+jwt.access-expiration=${JWT_ACCESS_EXPIRATION:3600000}
+jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION:604800000}
+jwt.secret=${JWT_SECRET}
