레디스에 로그인 정보 저장 + 토큰 재발급 기능 + 토큰무료화 로그아웃

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.jpa.defer-datasource-initialization=true
 jwt.access-expiration=${JWT_ACCESS_EXPIRATION:3600000}
 jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION:604800000}
 jwt.secret=${JWT_SECRET}
+
+# Redis ?? ??/??
+spring.data.redis.host=redis
+spring.data.redis.port=6379
+
+# (??) ????? ??? ??
+# spring.data.redis.password=your_password
