CORS 수정 (함수 잘못 사용된거 수정 + 설정 외부화

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.data.redis.port=6379
 
 # (Optional) Redis password configuration
 # spring.data.redis.password=your_password
+
+# CORS setting
+cors.allowed-origins=http://localhost:5173
